--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@types/es6-promise": "^3.3.0",
     "axios": "^0.18.0",
     "expo": "^32.0.0",
     "react": "16.5.0",
@@ -15,12 +16,16 @@
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
-    "@types/react": "^16.8.4",
-    "@types/react-native": "^0.57.37",
+    "@types/jest": "^24.0.11",
+    "@types/react": "^16.8.10",
+    "@types/react-native": "^0.57.42",
     "@types/react-navigation": "^3.0.3",
+    "@types/react-test-renderer": "^16.8.1",
     "babel-preset-expo": "^5.0.0",
-    "react-native-typescript-transformer": "^1.2.11",
-    "typescript": "^3.3.3333"
+    "husky": "^1.3.1",
+    "react-native-typescript-transformer": "^1.2.12",
+    "ts-jest": "^24.0.0",
+    "typescript": "^3.3.4000"
   },
   "private": true
 }
