--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "@types/es6-promise": "^3.3.0",
     "axios": "^0.18.0",
     "expo": "^32.0.0",
-    "react": "16.5.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
+    "react": "^16.8.4",
+    "react-native": "^0.59.2",
     "react-navigation": "^3.1.2"
   },
   "devDependencies": {
