--- a/package.json
+++ b/package.json
@@ -1,31 +1,31 @@
 {
-  "main": "node_modules/expo/AppEntry.js",
-  "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "eject": "expo eject"
-  },
-  "dependencies": {
-    "@types/es6-promise": "^3.3.0",
-    "axios": "^0.18.0",
-    "expo": "^32.0.0",
-    "react": "^16.8.4",
-    "react-native": "^0.59.2",
-    "react-navigation": "^3.1.2"
-  },
-  "devDependencies": {
-    "@types/axios": "^0.14.0",
-    "@types/jest": "^24.0.11",
-    "@types/react": "^16.8.10",
-    "@types/react-native": "^0.57.42",
-    "@types/react-navigation": "^3.0.3",
-    "@types/react-test-renderer": "^16.8.1",
-    "babel-preset-expo": "^5.0.0",
-    "husky": "^1.3.1",
-    "react-native-typescript-transformer": "^1.2.12",
-    "ts-jest": "^24.0.0",
-    "typescript": "^3.3.4000"
-  },
-  "private": true
+	"main": "node_modules/expo/AppEntry.js",
+	"scripts": {
+		"start": "expo start",
+		"android": "expo start --android",
+		"ios": "expo start --ios",
+		"eject": "expo eject"
+	},
+	"dependencies": {
+		"@types/es6-promise": "^3.3.0",
+		"axios": "^0.19.0",
+		"expo": "^33.0.0",
+		"react": "^16.8.6",
+		"react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
+		"react-navigation": "^3.11.0"
+	},
+	"devDependencies": {
+		"@types/axios": "^0.14.0",
+		"@types/jest": "^24.0.13",
+		"@types/react": "^16.8.19",
+		"@types/react-native": "^0.57.62",
+		"@types/react-navigation": "^3.0.7",
+		"@types/react-test-renderer": "^16.8.1",
+		"babel-preset-expo": "^5.0.0",
+		"husky": "^1.3.1",
+		"react-native-typescript-transformer": "^1.2.12",
+		"ts-jest": "^24.0.0",
+		"typescript": "^3.5.1"
+	},
+	"private": true
 }
