--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
 	"dependencies": {
 		"@types/es6-promise": "^3.3.0",
 		"axios": "^0.19.0",
-		"expo": "^33.0.0",
-		"react": "^16.8.6",
 		"react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
+		"expo": "^33.0.0",
+		"react": "16.8.3",
 		"react-navigation": "^3.11.0"
 	},
 	"devDependencies": {
